Edditing the db with contacts
